Minor Fix - change app name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-jwt-example",
+  "name": "admin-web-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
