--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,8 +14,9 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
-    "mongoose": "^4.7.1",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "mysql2": "^1.6.1",
+    "sequelize": "^4.38.0"
   },
   "devDependencies": {
     "eslint": "^3.11.1"
